<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tfg.uo.lightpen.activities.ActivityPentest">

    <!--
    -->
    <LinearLayout
        android:id="@+id/pentestLinearLayoutInProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/pentestProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:layout_alignTop="@+id/pentestValidateProgress"
            android:layout_toEndOf="@+id/pentestTextView_pluginSelect"
            android:visibility="visible" />

        <WebView
            android:id="@+id/pentestLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pentestLinearInicioAnalisis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:showIn="@layout/activity_pentest">

            <TextView
                android:id="@+id/pentestTextView_pluginSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/button"
                android:text="@string/pentestTextView_pluginSelect" />

            <EditText
                android:id="@+id/pentestEditText_dir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/pentestTextView_pluginSelect"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/pentestEditText_address"
                android:inputType="textPersonName"
                android:singleLine="false" />

            <Button
                android:id="@+id/pentestButton_Start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/pentestButton_validateAddress"
                android:layout_marginTop="18dp"
                android:onClick="startOperation"
                android:text="@string/pentestButton_startAnalisis" />

            <ListView
                android:id="@+id/activityPentest_listPlugin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/activity_pentest_listview_plugins"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="8dp"
                android:focusable="false"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:scrollbarStyle="outsideOverlay"
                android:layout_below="@+id/pentestButton_Start"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp" />

            <Button
                android:id="@+id/pentestButton_validateAddress"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/pentestEditText_dir"
                android:layout_marginTop="8dp"
                android:onClick="validateAddress"
                android:text="@string/pentestButton_validareAddress" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="back"
                android:text="@string/pentestButton_back"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <ProgressBar
                android:id="@+id/pentestValidateProgress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/pentestButton_Start"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/pentestButton_validateAddress"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
